--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -38,4 +38,16 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.669" />
 
+<!--        <Button-->
+<!--            android:id="@+id/callapi"-->
+<!--            android:layout_width="184dp"-->
+<!--            android:layout_height="56dp"-->
+<!--            android:text="Call Api"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.46"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintVertical_bias="0.769" />-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
