--- a/app/src/main/res/layout/activity_testapi.xml
+++ b/app/src/main/res/layout/activity_testapi.xml
@@ -6,11 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".data.Testapi">
 
-<!--    <Button-->
-<!--        android:id="@+id/button2"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Button"-->
-<!--        tools:layout_editor_absoluteX="173dp"-->
-<!--        tools:layout_editor_absoluteY="357dp" />-->
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:max="200"
+        android:progress="0"
+        android:progressDrawable="@drawable/circular"
+        tools:layout_editor_absoluteX="155dp"
+        tools:layout_editor_absoluteY="232dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
