--- a/app/src/main/res/layout/activity_testapi.xml
+++ b/app/src/main/res/layout/activity_testapi.xml
@@ -1,29 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".data.Testapi">
-
-
-    <TextView
-        android:id="@+id/textviewSteps"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10" />
-
-    <TextView
-        android:id="@+id/textviewProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10"/>
+    tools:context=".data.Testapi"
+    android:theme="@style/Theme.MaterialComponents">
 
     <Button
         android:id="@+id/nextActivity"
@@ -31,6 +15,29 @@
         android:layout_height="wrap_content"
         android:text="Next Activity" />
     <!--        android:inputType="textMultiLine"-->
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/nextActivityGraph"
+        android:text="Graph"/>
+
+    <TextView
+        android:id="@+id/textviewSteps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:textColor="#000"/>
+
+    <TextView
+        android:id="@+id/textviewProfile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:textColor="#000"/>
+
 
 
 </LinearLayout>
