--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@drawable/fitnessapp"
     android:layout_height="match_parent"
     tools:context=".data.Landing">
 
@@ -19,7 +19,7 @@
             app:layout_constraintHorizontal_bias="0.543"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.663" />
+            app:layout_constraintVertical_bias="0.781" />
 
         <Button
             android:id="@+id/signout"
@@ -35,24 +35,12 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.89" />
 
-        <Button
-            android:id="@+id/profile"
-            android:layout_width="184dp"
-            android:layout_height="56dp"
-            android:background="@drawable/buttonstyleithgradient"
-            android:text="Profile"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.541"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.774" />
-
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="36dp"
             android:layout_height="36dp"
+            android:background="@color/white"
+            android:keyboardNavigationCluster="true"
             android:src="@drawable/twotone_badge_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -66,10 +54,11 @@
             android:id="@+id/fName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|fill_horizontal"
-            android:paddingLeft="10dp"
+            android:layout_gravity="left"
+            android:paddingLeft="20dp"
             android:text="-----------"
-            android:textSize="20sp"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +72,7 @@
             android:id="@+id/imageView2"
             android:layout_width="36dp"
             android:layout_height="36dp"
+            android:background="@color/white"
             android:src="@drawable/twotone_email_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -99,7 +89,8 @@
             android:layout_gravity="left"
             android:paddingLeft="20dp"
             android:text="-----------"
-            android:textSize="20sp"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -113,6 +104,7 @@
             android:id="@+id/imageView3"
             android:layout_width="36dp"
             android:layout_height="36dp"
+            android:background="@color/white"
             android:src="@drawable/twotone_call_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -129,7 +121,8 @@
             android:layout_gravity="center_vertical"
             android:paddingLeft="20dp"
             android:text="-----------"
-            android:textSize="20sp"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -139,34 +132,11 @@
             app:layout_constraintVertical_bias="0.512"
             tools:ignore="MissingConstraints" />
 
-        <ImageView
-            android:id="@+id/top"
-            android:layout_width="420dp"
-            android:layout_height="165dp"
-            android:rotationY="0"
-            android:scaleX="1.35"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.55"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/yoga1" />
-
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="107dp"
-            android:layout_height="108dp"
-            android:src="@drawable/newlogo"
-            app:layout_constraintBottom_toTopOf="@+id/button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.551"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.243" />
-
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="164dp"
             android:fontFamily="@font/almendra_bold_italic"
             android:text="Welcome"
             android:textAllCaps="true"
@@ -174,11 +144,9 @@
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/imageView1"
-            app:layout_constraintEnd_toStartOf="@+id/imageView9"
-            app:layout_constraintHorizontal_bias="0.32"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/top"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.535"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
