--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,17 +4,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/colorAccent"
     android:layout_height="match_parent"
+    android:background="@drawable/fitnessapp"
     tools:context=".data.Landing">
+
+    <Button
+        android:id="@+id/seemore"
+        android:layout_width="183dp"
+        android:layout_height="53dp"
+        android:background="@drawable/buttonstyleithgradient"
+        android:text="See More"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.82" />
+
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="183dp"
+        android:layout_height="53dp"
+        android:background="@drawable/buttonstyleithgradient"
+        android:text="Log Out"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.93" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="First Name"
-        android:textColor="#D30C0C"
+        android:textColor="#F3DF31"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.021"
@@ -27,8 +54,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gender"
-        android:textColor="#D30C0C"
+        android:textColor="#F3DF31"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.021"
@@ -41,8 +69,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Last Name"
-        android:textColor="#D30C0C"
+        android:textColor="#F3DF31"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.696"
@@ -55,8 +84,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Full Name"
-        android:textColor="#D30C0C"
+        android:textColor="#F3DF31"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.024"
@@ -69,8 +99,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date of Birth"
-        android:textColor="#D30C0C"
+        android:textColor="#F3DF31"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.021"
@@ -125,8 +156,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Height"
-        android:textColor="#D30C0C"
+        android:textColor="#F3DF31"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.629"
@@ -139,8 +171,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Age"
-        android:textColor="#D30C0C"
+        android:textAllCaps="false"
+        android:textColor="#F3DF31"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.594"
@@ -153,8 +187,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Avg. Daily Steps"
-        android:textColor="#D30C0C"
+        android:textAllCaps="true"
+        android:textColor="#F3DF31"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.028"
@@ -231,30 +267,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.455" />
-
-    <Button
-        android:id="@+id/seemore"
-        android:layout_width="183dp"
-        android:layout_height="53dp"
-        android:background="@drawable/buttonstyleithgradient"
-        android:text="See More"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.82" />
-
-    <ImageView
-        android:id="@+id/top"
-        android:layout_width="418dp"
-        android:layout_height="111dp"
-        android:rotationY="0"
-        android:scaleX="2.5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.55"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/yoga" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
