added data retrieval inside steps graph activity

--- a/app/src/main/res/layout/activity_steps_graph.xml
+++ b/app/src/main/res/layout/activity_steps_graph.xml
@@ -21,15 +21,15 @@
         android:orientation="horizontal"
         android:gravity="center">
 
-        <TextView
-            android:id="@+id/yAxisTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:text="Steps"
-            android:rotation="-90"
-            android:textAlignment="center"/>
+<!--        <TextView-->
+<!--            android:id="@+id/yAxisTitle"-->
+<!--            android:layout_width="15dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:text="Steps"-->
+<!--            android:rotation="-90"-->
+<!--            android:textAlignment="center"/>-->
 
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/chart"
