--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/syncFitbit"
-        android:title="Sync Fitbit"
-        android:icon="@drawable/ic_sync_foreground"/>
+    <group>
+        <item
+            android:id="@+id/syncFitbit"
+            android:title="Sync Fitbit"
+            android:icon="@drawable/ic_sync_foreground"/>
+    </group>
 
-    <item
-        android:id="@+id/home"
-        android:title="Home"
-        android:icon="@drawable/ic_home_foreground"/>
+    <group>
+        <item
+            android:id="@+id/home"
+            android:title="Home"
+            android:icon="@drawable/ic_home_foreground"/>
+    </group>
 
-    <item
-        android:id="@+id/graph"
-        android:title="Graphs"
-        android:icon="@drawable/ic_graph_foreground"/>
+    <group>
+        <item
+            android:id="@+id/graph"
+            android:title="Graphs"
+            android:icon="@drawable/ic_graph_foreground"/>
+    </group>
 </menu>
