--- a/app/src/main/res/layout/activity_steps_graph.xml
+++ b/app/src/main/res/layout/activity_steps_graph.xml
@@ -1,42 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:textColor="@color/black"
-        android:textSize="35sp"
-        android:text="Steps from"
-        android:textAlignment="center"
-        android:id="@+id/titleTV"/>
+    android:background="@drawable/fitness1"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/yAxisTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:text="Steps"
             android:rotation="-90"
-            android:textAlignment="center"/>
+            android:text="Steps"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
 
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/chart"
             android:layout_width="match_parent"
-            android:layout_height="400dp"/>
+            android:layout_height="400dp" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/titleTV"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:text="Steps from"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="35sp" />
 
 
 </LinearLayout>
